[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hej"
version = "0.3.0"
description = "Simple Python web framework similar to Flask and FastHTML"
readme = "README.md"
authors = [
    {name = "Matthew"},
]
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://pypi.org/project/hej/"

[tool.setuptools.packages.find]
where = ["."]
include = ["hej*"]

[project.scripts]
hej = "hej.app:main"

[tool.setuptools.package-data]
hej = ["*.py"]
